Thu Feb 20 13:13:13 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* protid-classes.c (trivfs_protid_portclasses,
 	trivfs_protid_nportclasses): Make common.
	* cntl-classes.c (trivfs_cntl_portclasses,
	trivfs_cntl_nportclasses): Likewise.

Tue Feb 18 19:47:16 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* cntl-create.c (trivfs_create_control): Put the actual port
	creation call back in!

Fri Feb 14 02:10:50 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* dyn-classes.c: New file.
	* cntl-create.c (trivfs_create_control): Possibly allocate and add
	the port classes/buckets to the list of ones recognized by trivfs.
	* migsupport.c
	(trivfs_begin_using_protid): Support dynamic protid port classes.
	(trivfs_begin_using_control): Support dynamic control port classes.
	* cntl-clean.c (trivfs_clean_cntl): Clean up dynamic port
	classes/buckets.
	* trivfs.h (trivfs_add_control_port_class,
	trivfs_add_protid_port_class, trivfs_add_port_bucket,
	trivfs_remove_control_port_class, trivfs_remove_protid_port_class,
	trivfs_remove_port_bucket): New declarations.
	Doc fixes.
	* priv.h (trivfs_dynamic_protid_port_classes,
	trivfs_num_dynamic_protid_port_classes,
	trivfs_dynamic_control_port_classes,
	trivfs_num_dynamic_control_port_classes,
	trivfs_dynamic_port_buckets, trivfs_num_dynamic_port_buckets):
	New declarations.
	* Makefile (OTHERSRCS): Add dyn-classes.c, protid-classes.c, &
	cntl-classes.c.

Thu Feb 13 18:30:45 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* trivfs.h (trivfs_getroot_hook): New declaration.
	* fsys-getroot.c (trivfs_S_fsys_getroot): Use trivfs_getroot_hook.
	* Makefile (FSSRCS): Replace dir-reparent.c by file-reparent.c.

Mon Jan 20 16:37:04 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-reparent.c (trivfs_S_dir_reparent): New file.
	* Makefile (FSSRCS): Add dir-reparent.c.

Tue Nov 19 22:36:49 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* io-stat.c (trivfs_S_io_stat): Clear S_ITRANS and set S_IROOT in
	ST->st_mode (before calling trivfs_modify_stat).
