@@ -1,3 +1,9 @@
+Tue Jul 14 16:47:28 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>
+
+	* dir-lookup.c (trivfs_S_dir_lookup): In null-pathname case, this
+	should work even for non-directories, so actually do it, making
+	this a simpler case of trivfs_S_fsys_getroot.
+
 Thu Feb 20 13:13:13 1997  Miles Bader  <miles@gnu.ai.mit.edu>
 
 	* protid-classes.c (trivfs_protid_portclasses,
